# icao-wgs84-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
data/: rtca_do_283b_geodesic_examples.csv
docs/uml/: ellipsoid_class_diagram.puml
src/: ellipsoid.rs  geodesic.rs  intersection.rs  lib.rs
src/ellipsoid/: coefficients.rs  wgs84.rs
tests/: integration_test.rs  rtca_do_238b_examples_test.rs  rtca_do_283b_examples_test.rs
