[package]
name = "icao-wgs84"
version = "0.6.0"
authors = ["Ken Barker <ken.barker@via-technology.aero>"]
description = "A library for performing geometric calculations on the WGS84 ellipsoid."
documentation = "https://docs.rs/icao-wgs84/"
homepage = "https://github.com/kenba/icao-wgs84-rs"
repository = "https://github.com/kenba/icao-wgs84-rs"
readme = "README.md"
keywords = ["geometry", "ellipsoid", "wgs84", "icao", "navigation"]
categories = ["aerospace", "mathematics", "no-std", "science"]
license = "MIT"
edition = "2021"

[dependencies]
angle-sc = "0.3"
icao-units = "0.2"
once_cell = "1.21"
libm = "0.2"
unit-sphere = "0.5"

[dev-dependencies]
itertools = "0.14"
polars = "0.47"
serde_json = "1.0"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
nursery = "deny"
pedantic = "deny"
unwrap_used = "deny"
