[package]
name = "icao-wgs84"
version = "0.7.1"
authors = ["Ken Barker <ken.barker@via-technology.aero>"]
description = "A library for performing geometric calculations on the WGS84 ellipsoid."
documentation = "https://docs.rs/icao-wgs84/"
homepage = "https://github.com/kenba/icao-wgs84-rs"
repository = "https://github.com/kenba/icao-wgs84-rs"
readme = "README.md"
keywords = ["geometry", "ellipsoid", "wgs84", "icao", "navigation"]
categories = ["aerospace", "mathematics", "no-std", "science"]
license = "MIT"
edition = "2021"

[dependencies]
angle-sc = "1.1"
icao-units = "1.1"
once_cell = "1.21"
libm = "0.2"
unit-sphere = "0.6"

[dev-dependencies]
polars = { version = "0.49", features = ["decompress", "lazy"] }
serde_json = "1.0"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
nursery = "deny"
pedantic = "deny"
unwrap_used = "deny"
